<resources>
    <string name="app_name">PokerOne</string>
    <string name="play_game">Play Game</string>
    <string name="happy_with_my_cards">I’m happy with my cards</string>
    <string name="card_1">Card 1</string>
    <string name="card_2">Card 2</string>
    <string name="card_3">Card 3</string>
    <string name="card_4">Card 4</string>
    <string name="card_5">Card 5</string>
    <string name="switch_cards">Switch Cards</string>
    <string name="you_got">You got %1$s</string>
    <string name="choose_cards">Choose the cards\nyou would like to switch</string>
    <string name="number_of_draws">Number of draws: %1$d</string>
    <string name="congratulations">Congratulations!</string>
    <string name="play_again">Play again!</string>
</resources>