<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_green"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/game_red"
        android:text="@string/happy_with_my_cards"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="160dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_1"
            android:onClick="cardPressed"
            android:scaleType="fitXY"
            android:tag="0"
            app:srcCompat="@drawable/card_2c" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_2"
            android:onClick="cardPressed"
            android:scaleType="fitXY"
            android:tag="1"
            app:srcCompat="@drawable/card_jc" />

        <ImageView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_3"
            android:onClick="cardPressed"
            android:scaleType="fitXY"
            android:tag="2"
            app:srcCompat="@drawable/card_kh" />

        <ImageView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_4"
            android:onClick="cardPressed"
            android:scaleType="fitXY"
            android:tag="3"
            app:srcCompat="@drawable/card_2s" />

        <ImageView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_5"
            android:onClick="cardPressed"
            android:scaleType="fitXY"
            android:tag="4"
            app:srcCompat="@drawable/card_4d" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You got a pair.\nChoose the cards\nyou would like to switch"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>